read sent and received data

--- a/mcop/app/src/main/res/values/strings.xml
+++ b/mcop/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">mcop</string>
+    <string name="app_name">mCOP</string>
     <string name="label_terms">Terms &amp; Condition</string>
     <string name="label_button_start_monitoring">Start monitoring</string>
     <string name="label_accept_service">I accept terms of service</string>
