--- a/mcop/app/src/main/res/values/strings.xml
+++ b/mcop/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="label_initializing">Initializing</string>
     <string name="label_get_hashcode_report">Get hashcode report</string>
     <string name="label_device_safe">Your device is safe</string>
+    <string name="label_device_warning">Your device have %d waning</string>
     <string name="label_about">About</string>
     <string name="label_apps">Apps</string>
     <string name="label_apps_info">App Info</string>
