--- a/mcop/app/src/main/res/values/strings.xml
+++ b/mcop/app/src/main/res/values/strings.xml
@@ -6,8 +6,10 @@
     <string name="label_analysing">Analysing your device for suspicious application, Please wait.</string>
     <string name="label_initializing">Initializing</string>
     <string name="label_get_hashcode_report">Get hashcode report</string>
-    <string name="label_device_safe">Your device is safe</string>
-    <string name="label_device_warning">Your device have %d waning</string>
+    <string name="label_device_safe">Your device\nis safe</string>
+    <string name="label_device_have">Your device have</string>
+    <string name="label_warning">warning</string>
+    <string name="label_device_warning">Your device have\n %d waning</string>
     <string name="label_about">About</string>
     <string name="label_apps">Applications</string>
     <string name="label_apps_info">App Info</string>
