--- a/mcop/app/src/main/res/values/strings.xml
+++ b/mcop/app/src/main/res/values/strings.xml
@@ -25,9 +25,9 @@
     <string name="label_about_desc">mCOP by NBTC เตือนภัยแอปพลิเคชั่นอันตรายบนโทรศัพท์เคลื่อนที่</string>
     <string name="label_terms_detail">Terms and Conditions
 
-Welcome to Mcop. Before using this application, you must agree to comply with and be bound by the following terms and conditions of use, which together with our privacy policy govern the relationship of Mcop with you in relation to this application. If you disagree with any part of these terms and conditions, please do not use our application.
+Welcome to mCop. Before using this application, you must agree to comply with and be bound by the following terms and conditions of use, which together with our privacy policy govern the relationship of mCop with you in relation to this application. If you disagree with any part of these terms and conditions, please do not use our application.
 
-The term ‘Mcop’ or ‘us’ or ‘we’ refers to the developer of the application Mcop, which the project Mcop are funded by The National Broadcasting and Telecommunication Commission (NBTC), Thailand. The term ‘you’ refers to the user of our application.
+The term ‘mCop’ or ‘us’ or ‘we’ refers to the developer of the application mCop, which the project mCop are funded by The National Broadcasting and Telecommunication Commission (NBTC), Thailand. The term ‘you’ refers to the user of our application.
 
 The use of this application is subject to the following terms of use:
 
@@ -37,9 +37,9 @@ The use of this application is subject to the following terms of use:
 
 · Your use of any information or materials on this application or accessed via this application is entirely at your own risk, for which we shall not be liable. It shall be your own responsibility to ensure that any products, services or information available through this application meet your specific requirements.
 
-· All content on the application is protected by copyright, and owned or controlled by Mcop, or the party accredited as the owner or provider of the content. You must abide by all copyright notices, information, or restrictions contained in any content accessed through the application.
+· All content on the application is protected by copyright, and owned or controlled by mCop, or the party accredited as the owner or provider of the content. You must abide by all copyright notices, information, or restrictions contained in any content accessed through the application.
 
-· When you download the Mcop application, you are bound by the terms of the GNU General Public License. Full GNU GPL license details here: (http://www.gnu.org/licenses/licenses.html#GPL)
+· When you download the mCop application, you are bound by the terms of the GNU General Public License. Full GNU GPL license details here: (http://www.gnu.org/licenses/licenses.html#GPL)
 
 · Unauthorised use of this application may give rise to a claim for damages and/or be a criminal offence.
 
